<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- The Basics -->
    <groupId>com.pwc.us</groupId>
    <artifactId>compsource-portal</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>compsource-portal</name>
    <url/>

    <!-- Project Information -->
    <description/>
    <inceptionYear/>

    <!-- License Information -->


    <!-- Organization Information -->
    <organization>
        <name>Organization name here</name>
        <url>http://www.urltocompany.com</url>
    </organization>

    <!-- Developer Information -->
    <developers>
    </developers>

    <!-- Contributor Information -->
    <contributors>
    </contributors>

    <!-- Environment Settings -->

    <properties>
        <shiro.version>1.4.0-RC2</shiro.version>
        <slf4j.version>1.6.4</slf4j.version>
    </properties>

    <!-- Modules -->
    <modules>
        <module>API</module>
        <module>APIImpl</module>
        <module>WebServiceClient</module>
        <module>WebStripes</module>
        <module>Authentication</module>
    </modules>

    <!-- Build Settings -->
    <!-- Note: your build machine should have the following MAVEN_OPTS environment variable: -->
    <!-- -Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m -->
    <build>
        <finalName>compsource-portal</finalName>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                    <encoding>UTF-8</encoding>
                    <fork>true</fork>
                </configuration>
                <version>3.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
                <version>2.6</version>
            </plugin>
        </plugins>
    </build>

    <!-- Reporting Settings -->
    <reporting>
    </reporting>

    <!-- Report Settings -->
    <reports>
    </reports>

    <!-- Dependency Management -->
    <dependencyManagement>
        <dependencies>
            <!-- Archetype Built-in Internal Dependencies -->

            <dependency>
                <groupId>com.pwc.us</groupId>
                <artifactId>compsource-portal-api</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.pwc.us</groupId>
                <artifactId>compsource-portal-apiImpl</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.pwc.us</groupId>
                <artifactId>compsource-portal-webservice-client</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.pwc.us</groupId>
                <artifactId>compsource-portal-authentication</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <!-- Portlet Library Dependencies -->

            <!-- Standard Servlet Library Dependencies -->
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>servlet-api</artifactId>
                <version>2.5</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>javax.servlet.jsp</groupId>
                <artifactId>jsp-api</artifactId>
                <version>2.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>javax.xml.stream</groupId>
                <artifactId>stax-api</artifactId>
                <version>1.0-2</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>r09</version>
            </dependency>

            
            
            <!-- Stripes Library Dependencies -->
            <dependency>
                <groupId>net.sourceforge.stripes</groupId>
                <artifactId>stripes</artifactId>
                <version>1.5.7</version>
            </dependency>
            <dependency>
                <groupId>com.samaxes.stripes</groupId>
                <artifactId>stripesafe</artifactId>
                <version>1.0.1</version>
            </dependency>
            
            <!-- Dependency Injection -->
            <dependency>
                <groupId>com.google.inject</groupId>
                <artifactId>guice</artifactId>
                <version>3.0</version>
            </dependency>
            <dependency>
                <groupId>com.silvermindsoftware.stripes</groupId>
                <artifactId>stripes-guice</artifactId>
                <version>3.3</version>
                <scope>compile</scope>
            </dependency>
            
            
            <!-- J2EE Dependencies -->
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>jstl</artifactId>
                <version>1.1.2</version>
            </dependency>
            <dependency>
                <groupId>taglibs</groupId>
                <artifactId>standard</artifactId>
                <version>1.1.2</version>
            </dependency>
            
            <!-- Validation Dependencies -->
            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>1.4.0</version>
            </dependency>
            <dependency>
                <groupId>javax.mail</groupId>
                <artifactId>mail</artifactId>
                <version>1.4.7</version>
            </dependency>
            
            <!-- REST Client Dependencies -->
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>4.3.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpmime</artifactId>
                <version>4.3.1</version>
            </dependency>
            
            
            <!-- Email Dependencies -->
            <dependency>
                <groupId>org.freemarker</groupId>
                <artifactId>freemarker</artifactId>
                <version>2.3.20</version>
                <exclusions>
                    <exclusion>
                        <groupId>freemarker</groupId>
                        <artifactId>freemarker</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            
            

            
            <!-- LDAP Dependencies -->
            <dependency>
                <groupId>com.unboundid</groupId>
                <artifactId>unboundid-ldapsdk</artifactId>
                <version>2.3.4</version>
            </dependency>
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>2.3</version>
            </dependency>
            
            
            <!-- Security Dependencies -->
            <dependency>
                <groupId>org.apache.shiro</groupId>
                <artifactId>shiro-core</artifactId>
                <version>${shiro.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.shiro</groupId>
                <artifactId>shiro-web</artifactId>
                <version>${shiro.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.shiro</groupId>
                <artifactId>shiro-guice</artifactId>
                <version>${shiro.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.3.2</version>
            </dependency>
            
            <!-- Logging Dependencies -->
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>1.1.3</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jcl-over-slf4j</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            
            <!-- File Upload Dependencies -->
            <dependency>
                <groupId>commons-fileupload</groupId>
                <artifactId>commons-fileupload</artifactId>
                <version>1.3.3</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.4</version>
            </dependency>
            
            <dependency>
                <groupId>com.sun.xml.ws</groupId>
                <artifactId>jaxws-rt</artifactId>
                <version>2.1.4</version>
            </dependency>

            <!-- Unit Test Dependencies -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.4</version>
            </dependency>
            <dependency>
                <groupId>com.google.guiceberry</groupId>
                <artifactId>guiceberry</artifactId>
                <version>3.0.4</version>
            </dependency>
            <dependency>
                <groupId>simple-jndi</groupId>
                <artifactId>simple-jndi</artifactId>
                <version>0.11.4.1</version>
            </dependency>
            
        </dependencies>
        
    </dependencyManagement>

    <!-- Dependencies -->
    <dependencies>
    </dependencies>

    <!-- Plugin Repository Settings -->
    <pluginRepositories>
    </pluginRepositories>

    <!-- Repository Settings -->
    <repositories>
    </repositories>

    <!-- Distribution Settings -->
    <distributionManagement>

    </distributionManagement>

</project>